samples/_failures_safe/1761070933_eca13e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76177ce7.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_76177ce7.c:154:17: error: expected expression at end of input
  154 |                 int neighbor =
      |                 ^~~
./samples/SAFE/__tmp_76177ce7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76177ce7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76177ce7.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76177ce7.c:154:17: error: expected declaration or statement at end of input
